apps/20-media/jellyseerr/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-global-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyseerr
    gethomepage.dev/icon: jellyseerr.png
    gethomepage.dev/group: Media
spec:
  ingressClassName: traefik
  rules:
    - host: jellyseerr.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
  tls:
    - hosts:
        - jellyseerr.dev.truxonline.com
      secretName: jellyseerr-tls
